--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3"
+
+    //workManager
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 }
