--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
     <application
-
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -19,26 +18,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MainComponentsOfAndroid"
         tools:targetApi="31">
+
         <activity
             android:name=".ServiceActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".screens.MainActivity"
             android:exported="true" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false">
-        </activity>
-        <service android:name=".ServiceTimer"/>
-        <service android:name=".ForegroundService"/>
-        <service android:name=".IntentServiceExample"/>
-        <service android:name=".IntentServiceExample2"/>
-        <service android:name=".JobServiceExample"
-            android:permission="android.permission.BIND_JOB_SERVICE"/>
-        <service android:name=".JobIntentServiceExample"
-            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
+        <service android:name=".ServiceTimer" />
+        <service android:name=".ForegroundService" />
+        <service android:name=".IntentServiceExample" />
+        <service android:name=".IntentServiceExample2" />
+        <service
+            android:name=".JobServiceExample"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".JobIntentServiceExample"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
 </manifest>
