--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
 
     //workManager
     implementation "androidx.work:work-runtime-ktx:2.7.1"
+
+    //circleimageview
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
